@@ -262,3 +262,4 @@ suggestions:
   Dylan Mikus
   Andrea Rizzi
   Florian Petry
+  Lars Beckers
