@@ -32,6 +32,8 @@
 - TW-1488 You have more urgent tasks (thanks to Stefan Betz, Denis Kasak).
 - TW-1511 Project titles not properly parsed if they contain hyphens (thanks to
           Leon Feng, Blake Sweeney, Dylan Mikus).
+- TW-1515 abbreviation.minimum does not apply to date recognition (thanks to
+          Lars Beckers).
 - TW-1521 task project!=PROJECTNAME does not work (Regression) (thanks to
           Florian Petry).
 - TW-1527 Extra spaces added around slashes (thanks to Renato Alves).
